[tool.poetry]
name = "transit-clustering"
version = "0.1.0"
description = ""
authors = ["Megan Moore mm7148@uchicago.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pendulum = "2.1.2"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
shapely = "^2.0.3"
pygeoda = "^0.0.8.post1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
